--- a/src/materials/calculus/derivative/properties.mdx
+++ b/src/materials/calculus/derivative/properties.mdx
@@ -195,7 +195,7 @@ We can also see that if one of the limits had different values, then $f(x)$ woul
 
 ===
 
-# Practice: Calculating Limits
+# ✏️ Practice: Calculating Limits
 
 Evaluate $\lim\limits_{x\rightarrow 4} \frac{8 - \sqrt{x^3}}{\sqrt{x} - 2}  = ...$.  
 If it does not exist, type **DNE**. If it is $\infty$, type **infinity**.
@@ -217,7 +217,7 @@ If it does not exist, type **DNE**. If it is $\infty$, type **infinity**.
 
 ===
 
-# Practice: Calculating Limits
+# ✏️ Practice: Calculating Limits
 
 Evaluate $\lim\limits_{x\rightarrow \infty }(\sqrt{9x^2+6x-3}-3x-4) $.  
 If it does not exist, type **DNE**. If it is $\infty$, type **infinity**.
@@ -242,5 +242,5 @@ If it does not exist, type **DNE**. If it is $\infty$, type **infinity**.
 >
 > You may find these steps a little bit repetetive, so here is a little trick:
 >
-> > #formula# Given $f(x) = \sqrt{ax^2 + bx + c} - \sqrt{px^2 + qx + r}$,  
+> > #formula# Given $f(x) = \sqrt{ax^2 + bx + c} - \sqrt{px^2 + qx + r}$, where $a$, $b$, $c$, $p$, $q$, and $r$ are all constants,
 > > then, $\lim_{x\rightarrow \infty} f(x) = \begin{cases} \infty & \text{ if } a > p \\ \frac{b-q}{2\sqrt{a}} & \text{ if } a = p \\ -\infty & \text{ if } a < p \\ \end{cases}$
