--- a/src/materials/calculus/limits/common.mdx
+++ b/src/materials/calculus/limits/common.mdx
@@ -31,7 +31,7 @@ However, we will try to **prove** it, and there are many ways to prove this limi
 >
 > Suppose that $f(x) ≤ g(x) ≤ h(x)$ for all $x$ in an open interval containing $a$, except possibly at $a$, and $\lim\limits_{x\rightarrow a}f(x)= \lim\limits_{x\rightarrow a} h(x)=L$. So, $\lim\limits_{x\rightarrow a} g(x)=L$.
 
-![Visualization](/materials/squeeze_theorem_proof.png "Visualization")
+![Squeeze Theorem](/materials/squeeze_theorem_proof.png "Squeeze Theorem")
 
 First, we will refer to $\angle BOC$ as $x$ in radian, and the circle's radius as $r$. Note that $BC$ and $DA$ are perpendicular to $OA$ and $OC$. Based on this, we can see that:
 
@@ -81,21 +81,7 @@ $$
 $$
 
 There we go! We have proven that $\lim\limits_{x\rightarrow 0}\frac{\sin{x}}{x} = 1$.
-
-===
-
-# Practice: Limits of Trigonometric Functions
-
-Match the limits on the left side, with the numbers on the right side.
-
-`[match]@limit-trig-1@$\lim\limits_{x\rightarrow \infty} \frac{\csc^{-1}{(x)}}{x^2 - x}$@$0$@`
-`[match]@limit-trig-2@$\lim\limits_{a\rightarrow \infty} \frac{\tan^{-1}{a}}{a}$@$1$@`
-`[match]@limit-trig-3@$\lim\limits_{x\rightarrow 0} \frac{\left(1-\cos\left(4x\right)\right)}{2x\sin\left(x\right)} $@$4$@`
-`[match]@limit-trig-4@$\lim\limits_{x\rightarrow 0} \frac{\sin{x}+\tan{x}}{\tan{2x}-\sin{x}}$@$2$@`
-`[match]@limit-trig-5@$\lim\limits_{x\rightarrow 0} \frac{\cos{17x} - \cos{8x}}{\cos{7x} - \cos{2x}}$@$5$@`
-`[match]@limit-log-1@$\lim\limits_{x\rightarrow 0} \ln{ \left [ (1 + 3x)^{\frac{1}{x}} \right ] }$@$3$@`
-`[match]@limit-log-2@$\lim\limits_{x\rightarrow 0} \frac{\ln{\left ( \frac{1}{3} + x \right )} - \ln{\left ( \frac{1}{3} - x \right )}}{x}$@$6$@`
-
+``
 ===
 
 # Limits of Logarithmic-related Functions
@@ -136,3 +122,17 @@ $$
 $$
 
 The remaining infinite terms would be zero due to $x$, so the only term that matters is the first one, that is $\ln{a}$, which would be the limit.
+
+===
+
+# Practice: Limits of Trigonometric and Logarithmic Functions
+
+Match the limits on the left side, with the numbers on the right side.
+
+`[match]@limit-trig-1@$\lim\limits_{x\rightarrow \infty} \frac{\csc^{-1}{(x)}}{x^2 - x}$@$0$@`
+`[match]@limit-trig-2@$\lim\limits_{a\rightarrow \infty} \frac{\tan^{-1}{a}}{a}$@$1$@`
+`[match]@limit-trig-3@$\lim\limits_{x\rightarrow 0} \frac{\left(1-\cos\left(4x\right)\right)}{2x\sin\left(x\right)} $@$4$@`
+`[match]@limit-trig-4@$\lim\limits_{x\rightarrow 0} \frac{\sin{x}+\tan{x}}{\tan{2x}-\sin{x}}$@$2$@`
+`[match]@limit-trig-5@$\lim\limits_{x\rightarrow 0} \frac{\cos{17x} - \cos{8x}}{\cos{7x} - \cos{2x}}$@$5$@`
+`[match]@limit-log-1@$\lim\limits_{x\rightarrow 0} \ln{ \left [ (1 + 3x)^{\frac{1}{x}} \right ] }$@$3$@`
+`[match]@limit-log-2@$\lim\limits_{x\rightarrow 0} \frac{\ln{\left ( \frac{1}{3} + x \right )} - \ln{\left ( \frac{1}{3} - x \right )}}{x}$@$6$@`
