--- a/src/materials/calculus/limits/common.mdx
+++ b/src/materials/calculus/limits/common.mdx
@@ -1,16 +1,17 @@
 # Limits of Trigonometric Functions
 
-> #formula#
->
-> Given the constants $a$, and $b$:
->
-> $$
-> \begin{align*}
-> \text{1. }&\lim\limits_{x\rightarrow 0}\frac{\sin{ax}}{bx}=\lim\limits_{x\rightarrow 0}\frac{ax}{\sin{bx}}=\frac{a}{b}\\
-> \text{2. }&\lim\limits_{x\rightarrow 0}\frac{\tan{ax}}{bx}=\lim\limits_{x\rightarrow 0}\frac{ax}{\tan{bx}}=\frac{a}{b}\\
-> \text{3. }&\lim\limits_{x\rightarrow 0}\frac{\sin{ax}}{\tan{bx}}=\lim\limits_{x\rightarrow 0}\frac{\tan{ax}}{\sin{bx}}=\frac{a}{b}\\
-> \text{4. }&\lim\limits_{x\rightarrow 0}\frac{\sin{ax}}{\sin{bx}}=\lim\limits_{x\rightarrow 0}\frac{\tan{ax}}{\tan{bx}}=\frac{a}{b}\\ \end{align*}
-> $$
+<Formula>
+Given the constants $a$, and $b$:
+
+$$
+\begin{align*}
+\text{1. }&\lim\limits_{x\rightarrow 0}\frac{\sin{ax}}{bx}=\lim\limits_{x\rightarrow 0}\frac{ax}{\sin{bx}}=\frac{a}{b}\\
+\text{2. }&\lim\limits_{x\rightarrow 0}\frac{\tan{ax}}{bx}=\lim\limits_{x\rightarrow 0}\frac{ax}{\tan{bx}}=\frac{a}{b}\\
+\text{3. }&\lim\limits_{x\rightarrow 0}\frac{\sin{ax}}{\tan{bx}}=\lim\limits_{x\rightarrow 0}\frac{\tan{ax}}{\sin{bx}}=\frac{a}{b}\\
+\text{4. }&\lim\limits_{x\rightarrow 0}\frac{\sin{ax}}{\sin{bx}}=\lim\limits_{x\rightarrow 0}\frac{\tan{ax}}{\tan{bx}}=\frac{a}{b}\\ \end{align*}
+$$
+
+</Formula>
 
 Although the above limits are easy to remember, you may still wonder how are they possible.
 
@@ -26,28 +27,30 @@ However, we will try to **prove** it, and there are many ways to prove this limi
 
 # Proof of a Trigonometric Limit
 
-> #theorem#
-> **Squeeze Theorem**
->
-> Suppose that $f(x) ≤ g(x) ≤ h(x)$ for all $x$ in an open interval containing $a$, except possibly at $a$, and $\lim\limits_{x\rightarrow a}f(x)= \lim\limits_{x\rightarrow a} h(x)=L$. So, $\lim\limits_{x\rightarrow a} g(x)=L$.
+<Theorem>
+**Squeeze Theorem**
+
+Suppose that $f(x) ≤ g(x) ≤ h(x)$ for all $x$ in an open interval containing $a$, except possibly at $a$, and $\lim\limits_{x\rightarrow a}f(x)= \lim\limits_{x\rightarrow a} h(x)=L$. So, $\lim\limits_{x\rightarrow a} g(x)=L$.
+
+</Theorem>
 
 ![Squeeze Theorem](/materials/squeeze_theorem_proof.png "Squeeze Theorem")
 
 First, we will refer to $\angle BOC$ as $x$ in radian, and the circle's radius as $r$. Note that $BC$ and $DA$ are perpendicular to $OA$ and $OC$. Based on this, we can see that:
 
--   $OB$'s length = $OA$'s length = $r$
--   $BC$'s length = $r \sin{x}$
--   $OC$'s length = $r \cos{x}$
--   $AD$'s length = $r \tan{x}$
+- $OB$'s length = $OA$'s length = $r$
+- $BC$'s length = $r \sin{x}$
+- $OC$'s length = $r \cos{x}$
+- $AD$'s length = $r \tan{x}$
 
 Next, we will extract three different shapes; the triangle $BOC$, the sector $BOA$, and the triangle $DOA$. Just by looking at the visualization, we can tell that:
 $$ \text{Area }BOC \lt \text{Area }BOA \lt \text{DOA} $$
 
 Before continuing, we must find each of the region's area:
 
--   $\text{Triangle } BOC = \frac{1}{2} r^2 \sin{x} \cos{x}$
--   $\text{Sector } BOA = \frac{1}{2}xr^2$
--   $\text{Triangle } DOA = \frac{1}{2} r^2 \tan{x}$
+- $\text{Triangle } BOC = \frac{1}{2} r^2 \sin{x} \cos{x}$
+- $\text{Sector } BOA = \frac{1}{2}xr^2$
+- $\text{Triangle } DOA = \frac{1}{2} r^2 \tan{x}$
 
 Now that we know each of the area, we can plug the formula in:
 
@@ -86,7 +89,9 @@ There we go! We have proven that $\lim\limits_{x\rightarrow 0}\frac{\sin{x}}{x} 
 
 # Limits of Logarithmic-related Functions
 
-> #formula# $\lim\limits_{x\rightarrow \infty} \left ( 1 + \frac{1}{x} \right) ^ x = e$
+<Formula>
+$\lim\limits_{x\rightarrow \infty} \left ( 1 + \frac{1}{x} \right) ^ x = e$
+</Formula>
 
 The euler number is often defined as above. Using the above, we can quickly prove that, for a constant $k$, $\lim\limits_{x\rightarrow \infty} \left ( 1 + \frac{k}{x} \right) ^ x = e^k$.
 Let us first define a new variable $y$, such that $y = \frac{x}{k}$.
@@ -105,7 +110,9 @@ Since $x$ is approaching $\infty$, when we swap out the variables of the limit, 
 
 ---
 
-> #formula# Given the constant $a$, $\lim\limits_{x\rightarrow 0} \frac{a^x - 1}{x} = \ln{a} $
+<Formula>
+Given the constant $a$, $\lim\limits\_{x\rightarrow 0} \frac{a^x - 1}{x} = \ln{a} $
+</Formula>
 
 To prove the above limit, we must first know that $a^x$ can be represented as a series, that is:  
 $$1 + x \ln{a} + \frac{\left ( x \ln{a} \right )^2}{2!} + \frac{\left ( x \ln{a} \right )^3}{3!} + ...$$
