--- a/src/materials/calculus/limits/common.mdx
+++ b/src/materials/calculus/limits/common.mdx
@@ -136,10 +136,38 @@ The remaining infinite terms would be zero due to $x$, so the only term that mat
 
 Match the limits on the left side, with the numbers on the right side.
 
-`[match]@limit-trig-1@$\lim\limits_{x\rightarrow \infty} \frac{\csc^{-1}{(x)}}{x^2 - x}$@$0$@`
-`[match]@limit-trig-2@$\lim\limits_{a\rightarrow \infty} \frac{\tan^{-1}{a}}{a}$@$1$@`
-`[match]@limit-trig-3@$\lim\limits_{x\rightarrow 0} \frac{\left(1-\cos\left(4x\right)\right)}{2x\sin\left(x\right)} $@$4$@`
-`[match]@limit-trig-4@$\lim\limits_{x\rightarrow 0} \frac{\sin{x}+\tan{x}}{\tan{2x}-\sin{x}}$@$2$@`
-`[match]@limit-trig-5@$\lim\limits_{x\rightarrow 0} \frac{\cos{17x} - \cos{8x}}{\cos{7x} - \cos{2x}}$@$5$@`
-`[match]@limit-log-1@$\lim\limits_{x\rightarrow 0} \ln{ \left [ (1 + 3x)^{\frac{1}{x}} \right ] }$@$3$@`
-`[match]@limit-log-2@$\lim\limits_{x\rightarrow 0} \frac{\ln{\left ( \frac{1}{3} + x \right )} - \ln{\left ( \frac{1}{3} - x \right )}}{x}$@$6$@`
+<Match
+  id="limit-trig-1"
+  left="\lim\limits_{a\rightarrow \infty} \frac{\tan^{-1}{a}}{a}"
+  right="0"
+/>
+<Match
+  id="limit-trig-2"
+  left="\lim\limits_{a\rightarrow \infty} \frac{\tan^{-1}{a}}{a}"
+  right="1"
+/>
+<Match
+  id="limit-trig-3"
+  left="\lim\limits_{x\rightarrow 0} \frac{\left(1-\cos\left(4x\right)\right)}{2x\sin\left(x\right)}"
+  right="2"
+/>
+<Match
+  id="limit-trig-4"
+  left="\lim\limits_{x\rightarrow 0} \frac{\sin{x}+\tan{x}}{\tan{2x}-\sin{x}}"
+  right="3"
+/>
+<Match
+  id="limit-trig-5"
+  left="\lim\limits_{x\rightarrow 0} \frac{\cos{17x} - \cos{8x}}{\cos{7x} - \cos{2x}}"
+  right="4"
+/>
+<Match
+  id="limit-log-1"
+  left="\lim\limits_{x\rightarrow 0} \ln{ \left [ (1 + 3x)^{\frac{1}{x}} \right ] }"
+  right="5"
+/>
+<Match
+  id="limit-log-2"
+  left="\lim\limits_{x\rightarrow 0} \frac{\ln{\left ( \frac{1}{3} + x \right )} - \ln{\left ( \frac{1}{3} - x \right )}}{x}"
+  right="6"
+/>
