--- a/src/materials/calculus/derivative/definition.mdx
+++ b/src/materials/calculus/derivative/definition.mdx
@@ -48,6 +48,8 @@ Suppose we have a function $f(x)$ that we do not exactly know of, but we only ha
 
 What integer would be the most reasonable estimate for $\lim\limits_{x\rightarrow -2} f(x)$?
 
-<Practice id="estimate-limit" answer="5">
+<Practice id="estimate-limit" answer="5" />
 
-> #explanation# **That's right!** From the left ($x=-2.1$ to $x=-2.001$), the value of $f(x)$ approaches $5$. Likewise, from the right ($x=-1.8$ to $x=-1.998$), the value of $f(x)$ also approaches $5$. The most reasonable guess for $\lim\limits_{x\rightarrow -2} f(x)$ is $5$.
+<Explanation>
+ **That's right!** From the left ($x=-2.1$ to $x=-2.001$), the value of $f(x)$ approaches $5$. Likewise, from the right ($x=-1.8$ to $x=-1.998$), the value of $f(x)$ also approaches $5$. The most reasonable guess for $\lim\limits_{x\rightarrow -2} f(x)$ is $5$.
+</Explanation>
