feat: show input answer status only if all correct

--- a/src/materials/calculus/limits/continuity.mdx
+++ b/src/materials/calculus/limits/continuity.mdx
@@ -1,8 +1,9 @@
 # Continuity of a Function
 
-> #theorem#
-> Let $f$ be a function defined on an open interval containing all values of $x$ close to $a$. Then,  
-> the function $f$ is continuous at $a$ if $\lim\limits_{x\rightarrow 0}f(x)=f(a)$.
+<Theorem>
+Let $f$ be a function defined on an open interval containing all values of $x$ close to $a$. Then,  
+the function $f$ is continuous at $a$ if $\lim\limits_{x\rightarrow 0}f(x)=f(a)$.
+</Theorem>
 
 There are other specific terms to describe continuity:
 
@@ -45,42 +46,54 @@ This happens when $\lim\limits_{x\rightarrow a} f(x) = f(a)$, or $f(a)$ does not
 
 Given some functions $f$, $g$, and values of "$a$", determine the value of constants $c$ and $d$, so that both $f$ and $g$ are continuous on each function's value of $a$.
 
-$f(x)=\begin{cases}
-x+5& \text{, } x \leq-3\\ 
+$$
+f(x)=\begin{cases}
+x+5& \text{, } x \leq-3\\
 c-2x& \text{, } x > -3\\
-\end{cases}$
+\end{cases}
+$$
 
-$g(x)=\begin{cases}
-d-x& \text{, } x <\frac{\pi}{2}\\ 
+$$
+g(x)=\begin{cases}
+d-x& \text{, } x \lt\frac{\pi}{2}\\
 d \cos{x}& \text{, } x \geq \frac{\pi}{2}\\
-\end{cases}$
+\end{cases}
+$$
 
 ---
 
-What is the value of $c$, so $f$ is continuous on $a = -3$?  
-`[input;continuity-1]-4`
+What is the value of $c$, so $f$ is continuous on $a = -3$?
+
+<Practice id="continuity-1" answer="-4" />
 
 What is the value of $d$ (in degrees), so $g$ is continuous on $a = \frac{\pi}{2}$?
-`[input;continuity-2]90`
+
+<Practice id="continuity-2" answer="90" />
 
 ===
 
 # **Practice:** Discontinuity of a Function
 
-$f(x)=\begin{cases}
-x+5& \text{, } x \leq-3\\ 
+$$
+f(x)=\begin{cases}
+x+5& \text{, } x \leq-3\\
 c-2x& \text{, } x > -3\\
-\end{cases}$
+\end{cases}
+$$
 
-$g(x)=\begin{cases}
-d-x& \text{, } x <\frac{\pi}{2}\\ 
+$$
+g(x)=\begin{cases}
+d-x& \text{, } x \lt\frac{\pi}{2}\\
 d \cos{x}& \text{, } x \geq \frac{\pi}{2}\\
-\end{cases}$
+\end{cases}
+$$
 
 ---
 
 What is the value of $c$, so $f$ is continuous on $a = -3$?
-`[input;continuity-1]-4`
+
+<Practice id="continuity-3" answer="-4" />
 
 What is the value of $d$ (in degrees), so $g$ is continuous on $a = \frac{\pi}{2}$?
-`[input;continuity-2]90`
+
+<Practice id="continuity-4" answer="90" />
