chore: adjust styling

--- a/src/materials/calculus/limits/common.mdx
+++ b/src/materials/calculus/limits/common.mdx
@@ -132,13 +132,13 @@ The remaining infinite terms would be zero due to $x$, so the only term that mat
 
 ===
 
-# Practice: Limits of Trigonometric and Logarithmic Functions
+# **Practice:** Limits of Trigonometric and Logarithmic Functions
 
 Match the limits on the left side, with the numbers on the right side.
 
 <Match
   id="limit-trig-1"
-  left="\lim\limits_{a\rightarrow \infty} \frac{\tan^{-1}{a}}{a}"
+  left="\lim\limits_{x\rightarrow \infty} \frac{\csc^{-1}{(x)}}{x^2 - x}"
   right="0"
 />
 <Match
@@ -149,22 +149,22 @@ Match the limits on the left side, with the numbers on the right side.
 <Match
   id="limit-trig-3"
   left="\lim\limits_{x\rightarrow 0} \frac{\left(1-\cos\left(4x\right)\right)}{2x\sin\left(x\right)}"
-  right="2"
+  right="4"
 />
 <Match
   id="limit-trig-4"
   left="\lim\limits_{x\rightarrow 0} \frac{\sin{x}+\tan{x}}{\tan{2x}-\sin{x}}"
-  right="3"
+  right="2"
 />
 <Match
   id="limit-trig-5"
   left="\lim\limits_{x\rightarrow 0} \frac{\cos{17x} - \cos{8x}}{\cos{7x} - \cos{2x}}"
-  right="4"
+  right="5"
 />
 <Match
   id="limit-log-1"
   left="\lim\limits_{x\rightarrow 0} \ln{ \left [ (1 + 3x)^{\frac{1}{x}} \right ] }"
-  right="5"
+  right="3"
 />
 <Match
   id="limit-log-2"
