--- a/src/materials/calculus/limits/definition.mdx
+++ b/src/materials/calculus/limits/definition.mdx
@@ -38,7 +38,7 @@ This case is a little bit deifferent than the last one. This time, we have $h(x)
 
 ===
 
-# ✏️ Practice: Determining Limits
+# **Practice:** Determining Limits
 
 Suppose we have a function $f(x)$ that we do not exactly know of, but we only have the following information;
 
