--- a/src/materials/calculus/limits/properties.mdx
+++ b/src/materials/calculus/limits/properties.mdx
@@ -207,7 +207,7 @@ We can also see that if one of the limits had different values, then $f(x)$ woul
 
 ===
 
-# Practice: Calculating Limits
+# **Practice:** Calculating Limits
 
 Evaluate $\lim\limits_{x\rightarrow 2} \frac{x^2-4}{x^2+3x+2}  = ...$.  
 If it does not exist, type **DNE**. If it is $\infty$, type **infinity**.
@@ -227,7 +227,7 @@ $$
 
 ===
 
-# Practice: Calculating Limits
+# **Practice:** Calculating Limits
 
 Evaluate $\lim\limits_{x\rightarrow 4} \frac{8 - \sqrt{x^3}}{\sqrt{x} - 2}  = ...$.  
 If it does not exist, type **DNE**. If it is $\infty$, type **infinity**.
@@ -252,7 +252,7 @@ $$
 
 ===
 
-# Practice: Calculating Limits
+# **Practice:** Calculating Limits
 
 Evaluate $\lim\limits_{x\rightarrow \infty }(\sqrt{9x^2+6x-3}-3x-4) $.  
 If it does not exist, type **DNE**. If it is $\infty$, type **infinity**.
