chore: restructure course components

--- a/src/materials/calculus/derivative/definition.mdx
+++ b/src/materials/calculus/derivative/definition.mdx
@@ -6,6 +6,19 @@ $$
 f'(x)=\lim_{h\rightarrow 0} \frac{f(x + h) - f(x)}{h}
 $$
 
+Derivatives have different notations, but they still have the same meaning. The first derivative, second derivative, and the n-th derivative of a function are commonly written with these notations:
+
+$$
+f',\enspace f'',\enspace f^{(n)}
+$$
+
+$$
+\frac{d}{dx} [f(x)],\enspace \frac{d^2}{dx^2} [f(x)],\enspace \frac{d^n}{dx^n} [f(x)],  
+$$
+
+$$
+D_x f(x),\enspace D_x^2f(x),\enspace D_x^n(x)
+$$
 ===
 
 # Example of Derivative
@@ -48,3 +61,9 @@ y &= -2x + \frac{3}{4} \\
 $$
 
 <Graph functions="4*x*x-4*x+1,-2*x+0.75" points="0.25,0.25-solid" />
+===
+
+# Differentiability of a Function
+
+A function is said to be differentiable at $x=a$, if $f'(a)$ exists. Consequently, by being differentiable at $x=a$, $f(x)$ is also continuous at $x=a$.
+
