--- a/src/materials/calculus/limits/continuity.mdx
+++ b/src/materials/calculus/limits/continuity.mdx
@@ -42,6 +42,58 @@ This happens when $\lim\limits_{x\rightarrow a} f(x) = f(a)$, or $f(a)$ does not
 
 ===
 
+# **Practice:** Identifying Continuity
+
+The functions $f$, $g$, $h$, $p$ and $q$ are defined below, along with some $x$ values.
+
+$$
+f(x)=\frac{1}{x}\text{, at }x=0
+$$
+
+$$
+g(x)=\begin{cases}
+x^2& \text{, } x \leq2\\
+x& \text{, } x > 2\\
+\end{cases}\text{, at }x=2
+$$
+
+$$
+h(x)= \left \lfloor x \right \rfloor\text{, at }x=1
+$$
+
+$$
+p(x)=\begin{cases}
+x& \text{, } x < 4\\
+x^2-4x+3& \text{, } 4 \leq x < 5\\
+7.9& \text{, } x = 5\\
+\sqrt{x+ 59}& \text{, } x  > 5\\
+\end{cases}\text{, at }x=5
+$$
+
+$$
+q(x) = \frac{1}{x^{2}-6x+9} \text{, at }x=3
+$$
+
+---
+
+In these input boxes, respectively, name all functions that have Jump, Infinite and Removable discontinuity, at the given $x$ value. Functions should be written alphabetically.
+
+<Practice id="discontinuity-1" answer="g, h" placeholder="Jump Discontinuity" />
+
+<Practice
+  id="discontinuity-2"
+  answer="f, q"
+  placeholder="Infinite Discontinuity"
+/>
+
+<Practice
+  id="discontinuity-3"
+  answer="p"
+  placeholder="Removable Discontinuity"
+/>
+
+===
+
 # **Practice:** Continuity of a Function
 
 Given some functions $f$, $g$, and values of "$a$", determine the value of constants $c$ and $d$, so that both $f$ and $g$ are continuous on each function's value of $a$.
