--- a/src/materials/calculus/derivative/implicit.mdx
+++ b/src/materials/calculus/derivative/implicit.mdx
@@ -1,4 +1,4 @@
-# L'Hôpital's Rule
+# Implicit Differentiation
 
 Sometimes a function is not defined as a function of $x$. Consider the circle equation $x^2+y^2=r^2$. While we can rearrange this to obtain the $y=$ form, this will not always be the case. Consider another example $x^3y^2+\tan{y}=x^2-4y$. By normal means, it is impossible to isolate $y$, which prevents us from calculating $\frac{dy}{dx}$.
 
@@ -15,3 +15,13 @@ x^3y^2+\tan{y}&=x^2-4y\\
 \frac{dy}{dx} &= \frac{2x - 3x^2}{2y + \sec^2{y} + 4}\\
 \end{align*}
 $$
+
+===
+
+# Implicit Differentiation: Example
+
+Oh by the
+
+<Option>
+The function $f$ is continuous $x=0$.
+</Option>
