--- a/src/materials/calculus/limits/common.mdx
+++ b/src/materials/calculus/limits/common.mdx
@@ -138,36 +138,36 @@ Match the limits on the left side, with the numbers on the right side.
 
 <Match
   id="limit-trig-1"
-  left="\lim\limits_{x\rightarrow \infty} \frac{\csc^{-1}{(x)}}{x^2 - x}"
-  right="0"
+  left="#\lim\limits_{x\rightarrow \infty} \frac{\csc^{-1}{(x)}}{x^2 - x}#"
+  right="#0#"
 />
 <Match
   id="limit-trig-2"
-  left="\lim\limits_{a\rightarrow \infty} \frac{\tan^{-1}{a}}{a}"
-  right="1"
+  left="#\lim\limits_{a\rightarrow \infty} \frac{\tan^{-1}{a}}{a}#"
+  right="#1#"
 />
 <Match
   id="limit-trig-3"
-  left="\lim\limits_{x\rightarrow 0} \frac{\left(1-\cos\left(4x\right)\right)}{2x\sin\left(x\right)}"
-  right="4"
+  left="#\lim\limits_{x\rightarrow 0} \frac{\left(1-\cos\left(4x\right)\right)}{2x\sin\left(x\right)}#"
+  right="#4#"
 />
 <Match
   id="limit-trig-4"
-  left="\lim\limits_{x\rightarrow 0} \frac{\sin{x}+\tan{x}}{\tan{2x}-\sin{x}}"
-  right="2"
+  left="#\lim\limits_{x\rightarrow 0} \frac{\sin{x}+\tan{x}}{\tan{2x}-\sin{x}}#"
+  right="#2#"
 />
 <Match
   id="limit-trig-5"
-  left="\lim\limits_{x\rightarrow 0} \frac{\cos{17x} - \cos{8x}}{\cos{7x} - \cos{2x}}"
-  right="5"
+  left="#\lim\limits_{x\rightarrow 0} \frac{\cos{17x} - \cos{8x}}{\cos{7x} - \cos{2x}}#"
+  right="#5#"
 />
 <Match
   id="limit-log-1"
-  left="\lim\limits_{x\rightarrow 0} \ln{ \left [ (1 + 3x)^{\frac{1}{x}} \right ] }"
-  right="3"
+  left="#\lim\limits_{x\rightarrow 0} \ln{ \left [ (1 + 3x)^{\frac{1}{x}} \right ] }#"
+  right="#3#"
 />
 <Match
   id="limit-log-2"
-  left="\lim\limits_{x\rightarrow 0} \frac{\ln{\left ( \frac{1}{3} + x \right )} - \ln{\left ( \frac{1}{3} - x \right )}}{x}"
-  right="6"
+  left="#\lim\limits_{x\rightarrow 0} \frac{\ln{\left ( \frac{1}{3} + x \right )} - \ln{\left ( \frac{1}{3} - x \right )}}{x}#"
+  right="#6#"
 />
